<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context="com.example.android.inventoryapp.EditorActivity">
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/editorActivity_name"
      android:textStyle="bold"
      android:layout_margin="@dimen/prouct_margin"
      android:textSize="@dimen/product_text_size"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/product_name"
        android:hint="@string/editorActivity_name"
        android:inputType="textCapWords"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editorActivity_price"
        android:textStyle="bold"
        android:layout_margin="@dimen/prouct_margin"
        android:textSize="@dimen/product_text_size"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/product_price"
        android:hint="@string/editorActivity_price"
        android:inputType="number" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editorActivity_quantity"
        android:textStyle="bold"
        android:layout_margin="@dimen/prouct_margin"
        android:textSize="@dimen/product_text_size"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/minus"
            android:id="@+id/button_minus"/>
        <EditText
            android:layout_weight="99"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/product_quantity"
            android:hint="@string/editorActivity_quantity"
            android:inputType="number" />
        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/plus"
            android:id="@+id/button_plus"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editorActivity_mail"
        android:textStyle="bold"
        android:layout_margin="@dimen/prouct_margin"
        android:textSize="@dimen/product_text_size"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/product_phone"
        android:hint="@string/editorActivity_email"
        android:inputType="textCapWords"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editorActivity_photo"
        android:textStyle="bold"
        android:layout_margin="@dimen/prouct_margin"
        android:textSize="@dimen/product_text_size"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/imageButton"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/editorActivity_photo"/>
        <ImageView
            android:adjustViewBounds="true"
            android:layout_weight="2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/select_photo"/>
    </LinearLayout>
</LinearLayout>
